# LLM-Powered-News-Research-Tool

./: google_palm_codebasics_q_and_a.py  langchain_helper.py  main.py  pyproject.toml  readme.md  requirements.txt
faiss_index/: index.faiss  index.pkl
